data/all_generated_tests/raw_wast_tests/nop_InvalidorInconsistentControlFlowGraph_546.wast
;; 7. **Test Description**:    - Create a sequence of `if`, `else`, and `end` instructions interspersed with `nop` and validate stack behavior before and after conditional branches.    - **Constraint Checked**: Consistent stack states and correct condition evaluations around `nop`.    - **Relation to CFG**: Tests CFG's conditional branching pathways ensuring `nop` does not disrupt path execution.

(assert_invalid
  (module
    (func $conditional-nop
      (if (i32.const 1)
        (then (nop))
        (else (nop))
      )
    )
  )
  "type mismatch"
)